--- a/public/sass/components/_directions.scss
+++ b/public/sass/components/_directions.scss
@@ -50,6 +50,12 @@
             position: relative;
             padding-top: 4.5%;
             height: 50%;
+            filter: blur(4px);
+            -webkit-filter: blur(9px);
+            -moz-filter: blur(9px);
+            -o-filter: blur(9px);
+            -ms-filter: blur(9px);
+
 //            background: url(../images/jazz_modern.png) no-repeat;
 //            background-position: center;
 //            -webkit-background-size: contain;
@@ -59,6 +65,9 @@
                 max-width: 100%;
                 max-height: 100%;
               }
+
+
+
           }
           .center{
             padding-top: 0;
@@ -67,12 +76,18 @@
             margin-right:1.5%;
             height: 86%;
            background-position: left;
+            -webkit-filter: blur(0);
+            -moz-filter: blur(0);
+            -o-filter: blur(0);
+            -ms-filter: blur(0);
           }
         }
 
 
         .directions_text{
           position: absolute;
+          display: none;
+          opacity: 0;
           z-index: 8;
           top: 32%;
           left: 55%;
