--- a/public/sass/components/_directions.scss
+++ b/public/sass/components/_directions.scss
@@ -1,104 +1,119 @@
 #s_directions{
   @include var_Sections(#FFF);
-      .directions__text-head{
-          @extend %var_top-short-description;
+  .directions__text-head{
+    @extend %var_top-short-description;
+  }
+  .directions__nav{
+    position: relative;
+    z-index: 5;
+    text-align: center;
+    div{
+      display: inline;
+      @include var_TextBebasNew(#2B1B1B, 1.5em," Bold");
+      margin: 0 1em;
+      letter-spacing: 0.05em;
+      cursor: pointer;
+    }
+    .active_dir{
+      color: #DA251C;
+      width: 161px;
+      height: 64px;
+      /*background: url(../images/button_menu_directions.png) no-repeat;
+      -webkit-background-size: contain;
+      background-size: contain;
+      background-position: 0px 10px;
+      padding: 0.7em 1.1em 1.5em 1.1em;*/
+      padding: .5em .9em;
+      background: #fff;
+      border-bottom: 2px solid #E97F79;
+      border-radius: 25px / 30px;
+      position: relative;
+      &:after {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 12.5%;
+        width: 75%;
+        height: 100%;
+        box-shadow: 0 15px 25px -15px rgba(218, 37, 28, .48);
       }
-      .directions__nav{
-          position: relative;
-          z-index: 5;
-          text-align: center;
-          div{
-            display: inline;
-            @include var_TextBebasNew(#2B1B1B, 1.5em," Bold");
-            margin: 0 1em;
-            letter-spacing: 0.05em;
-            cursor: pointer;
-          }
-          .active_dir{
-            color: #DA251C;
-            width: 161px;
-            height: 64px;
-            /*background: url(../images/button_menu_directions.png) no-repeat;
-            -webkit-background-size: contain;
-            background-size: contain;
-            background-position: 0px 10px;
-            padding: 0.7em 1.1em 1.5em 1.1em;*/
-            padding: .5em .9em;
-            background: #fff;
-            border-bottom: 2px solid #E97F79;
-            border-radius: 25px / 30px;
-            position: relative;
-            &:after {
-              content: "";
-              position: absolute;
-              bottom: 0;
-              left: 12.5%;
-              width: 75%;
-              height: 100%;
-              box-shadow: 0 15px 25px -15px rgba(218, 37, 28, .48);
-            }
-          }
+    }
+  }
+  .directions__slider{
+    width: 25*12%;
+    height: 100%;
+    vertical-align: bottom;
+    position: absolute;
+
+    div{
+      @include span(1 of 12 no-gutters);
+      position: relative;
+      padding-top: 4.5%;
+      height: 50%;
+      filter: blur(4px);
+      -webkit-filter: blur(9px);
+      -moz-filter: blur(9px);
+      -o-filter: blur(9px);
+      -ms-filter: blur(9px);
+
+      //            background: url(../images/jazz_modern.png) no-repeat;
+      //            background-position: center;
+      //            -webkit-background-size: contain;
+      //            background-size: contain;
+      img{
+        display: block;
+        max-width: 100%;
+        max-height: 100%;
       }
-        .directions__slider{
-          width: 25*12%;
-          height: 100%;
-          vertical-align: bottom;
-          position: absolute;
-
-          div{
-            @include span(1 of 12 no-gutters);
-            position: relative;
-            padding-top: 4.5%;
-            height: 50%;
-//            background: url(../images/jazz_modern.png) no-repeat;
-//            background-position: center;
-//            -webkit-background-size: contain;
-//            background-size: contain;
-              img{
-                display: block;
-                max-width: 100%;
-                max-height: 100%;
-              }
-          }
-          .center{
-            padding-top: 0;
-           @include span(1 of 6 no-gutters);
-            margin-left:0.5%;
-            margin-right:1.5%;
-            height: 86%;
-           background-position: left;
-          }
-        }
 
 
-        .directions_text{
-          position: absolute;
-          z-index: 8;
-          top: 32%;
-          left: 55%;
-          max-width: 430px;
-          h1{
-            @include var_TextBebasNew(#DA251C,7.7em," Book");
-            line-height: 0.95em;
-            padding-bottom: 0.1em;
-          }
-          p{
-            padding: 0.7em 0 0.7em;
-            @extend %var_text-arial;
-            line-height: 1.2em;
 
-          }
-          a{
-            color: #4491F9;
-            @extend %var_text-arial;
-            font-size: 1.2em;
-          }
-          .video{
-            @include var_BeforeImage(45px,'../images/button_small_video.png');
-          }
-          .applicate{
-            @include var_BeforeImage(45px,'../images/button_small_check.png');
-          }
-        }
-        @include var_SvgSwitcher(#dc241c)
+    }
+    .center{
+      padding-top: 0;
+      @include span(1 of 6 no-gutters);
+      margin-left:0.5%;
+      margin-right:1.5%;
+      height: 86%;
+      background-position: left;
+      -webkit-filter: blur(0);
+      -moz-filter: blur(0);
+      -o-filter: blur(0);
+      -ms-filter: blur(0);
+    }
+  }
+
+
+  .directions_text{
+    position: absolute;
+    display: none;
+    opacity: 0;
+    z-index: 8;
+    top: 32%;
+    left: 55%;
+    max-width: 430px;
+    h1{
+      @include var_TextBebasNew(#DA251C,7.7em," Book");
+      line-height: 0.95em;
+      padding-bottom: 0.1em;
+    }
+    p{
+      padding: 0.7em 0 0.7em;
+      @extend %var_text-arial;
+      line-height: 1.2em;
+
+    }
+    a{
+      color: #4491F9;
+      @extend %var_text-arial;
+      font-size: 1.2em;
+    }
+    .video{
+      @include var_BeforeImage(45px,'../images/button_small_video.png');
+    }
+    .applicate{
+      @include var_BeforeImage(45px,'../images/button_small_check.png');
+    }
+  }
+  @include var_SvgSwitcher(#dc241c)
 }
