--- a/public/css/style.css
+++ b/public/css/style.css
@@ -507,7 +507,11 @@ header .h_number:before {
   margin-left: 0.30303%;
   margin-right: 0.30303%;
 }
-/* line 23, ../sass/components/_masters.scss */
+/* line 22, ../sass/components/_masters.scss */
+.main_wrapper #s_masters .masters__teacher .teachers .ico img {
+  max-width: 100%;
+}
+/* line 26, ../sass/components/_masters.scss */
 .main_wrapper #s_masters .masters__teacher .teachers .description {
   width: 52.72727%;
   float: left;
@@ -515,7 +519,7 @@ header .h_number:before {
   margin-right: 0.30303%;
   float: right;
 }
-/* line 26, ../sass/components/_masters.scss */
+/* line 29, ../sass/components/_masters.scss */
 .main_wrapper #s_masters .masters__teacher .teachers .description h1 {
   color: #DA251C;
   font-family: "Bebas Neue Book";
@@ -523,11 +527,11 @@ header .h_number:before {
   font-weight: 300;
   padding-bottom: 0.4em;
 }
-/* line 30, ../sass/components/_masters.scss */
+/* line 33, ../sass/components/_masters.scss */
 .main_wrapper #s_masters .masters__teacher .teachers .description p {
   padding-bottom: 0.3em;
 }
-/* line 33, ../sass/components/_masters.scss */
+/* line 36, ../sass/components/_masters.scss */
 .main_wrapper #s_masters .masters__teacher .teachers .description a {
   color: #FFF;
   font-size: 0.915em;
@@ -563,7 +567,7 @@ header .h_number:before {
 .main_wrapper #s_masters svg line {
   stroke: #ffffff;
 }
-/* line 51, ../sass/components/_masters.scss */
+/* line 54, ../sass/components/_masters.scss */
 .main_wrapper #f1_container {
   position: relative;
   margin: 10px auto;
@@ -575,7 +579,7 @@ header .h_number:before {
   -o-perspective: 1000px;
   perspective: 1000px;
 }
-/* line 62, ../sass/components/_masters.scss */
+/* line 65, ../sass/components/_masters.scss */
 .main_wrapper #f1_card {
   width: 100%;
   height: 100%;
@@ -588,14 +592,14 @@ header .h_number:before {
   transform-style: preserve-3d;
   transition: all .35s linear;
 }
-/* line 74, ../sass/components/_masters.scss */
+/* line 77, ../sass/components/_masters.scss */
 .main_wrapper #f1_container:hover #f1_card {
   -webkit-transform: rotateY(180deg);
   -moz-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
-/* line 80, ../sass/components/_masters.scss */
+/* line 83, ../sass/components/_masters.scss */
 .main_wrapper .face {
   position: absolute;
   width: 100%;
@@ -605,7 +609,7 @@ header .h_number:before {
   -o-backface-visibility: hidden;
   backface-visibility: hidden;
 }
-/* line 89, ../sass/components/_masters.scss */
+/* line 92, ../sass/components/_masters.scss */
 .main_wrapper .face.back {
   display: block;
   -webkit-transform: rotateY(180deg);
