--- a/public/sass/components/_directions.scss
+++ b/public/sass/components/_directions.scss
@@ -65,6 +65,10 @@
         max-width: 100%;
         max-height: 100%;
       }
+      .secondimg{
+        opacity: 0;
+        display: none;
+      }
 
 
 
