--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,8 +292,8 @@ header .h_number:before {
 .main_wrapper #s_intro .intro__main_text p {
   padding-bottom: 5%;
 }
-/* line 37, ../sass/components/_intro.scss */
-.main_wrapper #s_intro .intro__backscreen {
+/* line 38, ../sass/components/_intro.scss */
+.main_wrapper #s_intro .intro__backscreen .intro_1, .main_wrapper #s_intro .intro__backscreen .intro_2 {
   position: absolute;
   z-index: 2;
   float: right;
@@ -303,6 +303,12 @@ header .h_number:before {
   background: url(../images/main.png) no-repeat;
   -webkit-background-size: cover;
   background-size: cover;
+}
+/* line 49, ../sass/components/_intro.scss */
+.main_wrapper #s_intro .intro__backscreen .intro_2 {
+  background: url(../images/main2.png) no-repeat;
+  z-index: 1;
+  opacity: 0;
 }
 /* line 1, ../sass/components/_directions.scss */
 .main_wrapper #s_directions {
